adding swagger documentation to delete, edit, disable and enable websites endpoint
