# internal/services/api/handlers/websites/websites_get_handler.go
@@ -5,7 +5,6 @@ import (
 	"log"
 	"net/http"
 	"strconv"
-	"website-monitor/internal/domain/entities"
 	"website-monitor/internal/domain/infrastructure/data"
 
 	"github.com/gorilla/mux"
@@ -19,9 +18,9 @@ type websiteGetHandler struct {
 // swagger:route GET /websites/1 websites GetWebiste
 // Return a website from the application
 // responses:
-//	200: websiteResponse
+//	200: websiteGetResponse
 // 	404: notFoundResponse
-//	501: errorResponse
+//	501: internalServerErrorResponse
 func NewWebsiteGetHandler(l *log.Logger, d data.WebsiteData) *websiteGetHandler {
 	return &websiteGetHandler{
 		log:  l,
@@ -48,12 +47,4 @@ func (h *websiteGetHandler) Get(rw http.ResponseWriter, r *http.Request) {
 	}
 
 	json.NewEncoder(rw).Encode(website)
-}
-
-// Data structure representing a  websites
-// swagger:response websiteResponse
-type websiteResponseWrapper struct {
-	// Newly created product
-	// in: body
-	Body entities.WebSite
 }
